integ-tests/tests/snapshots/parser__integer_range_negative.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ integer_range_negative:1:5
  │
1 │ a = -9223372036854775809
  │     ^^^^^^^^^^^^^^^^^^^^ unable to parse number


